--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,8 +9,7 @@
 
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:label="@string/app_name">
         <activity
             android:name="fi.jyu.ties425.geotrack.MainActivity"
             android:label="@string/title_activity_main" >
@@ -20,6 +19,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity android:name="fi.jyu.ties425.geotrack.MapActivity"
+			android:label="@string/map_activity_name"
+			android:theme="@android:style/Theme.NoTitleBar">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+		</activity>
+		
+		<uses-library android:name="com.google.android.maps" />
     </application>
 
+
+
+	
 </manifest>
