--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,11 +5,14 @@
 
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="15" />
+        android:targetSdkVersion="8" />
 
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name">
+        
+        <uses-library android:name="com.google.android.maps" />
+        
         <activity
             android:name="fi.jyu.ties425.geotrack.MainActivity"
             android:label="@string/title_activity_main" >
@@ -20,7 +23,7 @@
             </intent-filter>
         </activity>
         
-        <activity android:name="fi.jyu.ties425.geotrack.MapActivity"
+        <activity android:name="fi.jyu.ties425.geotrack.PointsInMapActivity"
 			android:label="@string/map_activity_name"
 			android:theme="@android:style/Theme.NoTitleBar">
 			<intent-filter>
@@ -29,7 +32,6 @@
 			</intent-filter>
 		</activity>
 		
-		<uses-library android:name="com.google.android.maps" />
     </application>
 
 
