--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,11 @@
     package="com.example.geotrack"
     android:versionCode="1"
     android:versionName="1.0" >
-
+    
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="8" />
@@ -26,15 +30,8 @@
         <activity android:name="fi.jyu.ties425.geotrack.PointsInMapActivity"
 			android:label="@string/map_activity_name"
 			android:theme="@android:style/Theme.NoTitleBar">
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-				<category android:name="android.intent.category.LAUNCHER" />
-			</intent-filter>
 		</activity>
 		
     </application>
 
-
-
-	
 </manifest>
